@@ -112,7 +112,7 @@ finished. Searches will return the file, and users can download it. It
 will not appear in your file list until the next refresh.</dd>
   <dt>Use CTRL for line history</dt>
   <dd>Press up arrow while holding down CTRL to scroll through line
-history. If not enabled, up arrow will be enough.</dd>
+history. If not enabled, you can still use ALT.</dd>
   <dt>Don't automatically disconnect favorite users who leave the hub</dt>
   <dd>With this option enabled, and <a href="window_settings_advanced.html#disconnect">Automatically disconnect users who leave the hub</a>, users who are in your <a href="favorite_users.html">Favorite users</a> page are not disconnected.</dd>
   <dt>Show shell menu where possible</dt>
