@@ -15,6 +15,7 @@
 * [L#208917] Fixed menu background colors (poy)
 * [L#208344] Fix about dialog up/down stats
 * [L#209099] Fixed non-disappearing controls in search (poy)
+* [L#208684] Made the Alt key work again for line history in hub window (poy)
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
